unpackaged/main/default/objects/breadwinner_ns__BW_Payment_Transaction__c/breadwinner_ns__BW_Payment_Transaction__c.object-meta.xml
<CustomObject>
    <label>NetSuite Payment Transaction</label>
    <nameField>
        <label>Transaction #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Payment Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>