unpackaged/main/default/objects/breadwinner_ns__BW_Payment_Transaction__c/fields/breadwinner_ns__Amount__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>