unpackaged/main/default/objects/breadwinner_ns__BW_Payment_Transaction__c/fields/breadwinner_ns__Doc__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Doc__c</fullName>
    <label>Doc Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>