unpackaged/main/default/objects/breadwinner_ns__BW_Payment_Transaction__c/fields/breadwinner_ns__ParentInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ParentInternalId__c</fullName>
    <description>Stores the Parent Transaction Internal Id</description>
    <label>Parent Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>