unpackaged/main/default/objects/breadwinner_ns__BW_Payment_Transaction__c/fields/breadwinner_ns__Payment__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>breadwinner_ns__BW_Payment__c</referenceTo>
    <relationshipLabel>NetSuite Payment Transactions</relationshipLabel>
    <relationshipName>PaymentTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>