unpackaged/main/default/objects/breadwinner_ns__BW_Payment_Transaction__c/fields/breadwinner_ns__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>