unpackaged/main/default/objects/breadwinner_ns__BW_Payment_Transaction__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__Transaction_Type__c</columns>
    <columns>breadwinner_ns__Apply__c</columns>
    <columns>breadwinner_ns__ApplyDate__c</columns>
    <columns>breadwinner_ns__Invoice__c</columns>
    <columns>breadwinner_ns__Payment__c</columns>
    <columns>breadwinner_ns__Credit_Memo__c</columns>
    <columns>breadwinner_ns__Total__c</columns>
    <columns>breadwinner_ns__Due__c</columns>
    <columns>breadwinner_ns__Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>